--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,14 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
+	implementation 'com.google.guava:guava:30.0-jre'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+
+	testImplementation 'com.adobe.testing:s3mock-junit5:2.1.28'
 }
 
 dependencyManagement {
